# WeiMeng

./: 1.html  AGENTS.md  AI设计工作台-白天.html  AI设计工作台—黑夜.html  CLAUDE.md  LICENSE  README.md  README_CN.md  README_zh-CN.md  package-lock.json  sandbox-integration.md  云服务.html  凡人修仙传.txt  原型图.html  按年费的价格页面.html  更换邮箱弹窗.html  梳理.txt  模型供应商页面.html  测试文件.txt  测试文本.txt  登录注册页面.html  目录结构.md  组件库.html  自部署页面设计.html  要求.md  设置页面.html  设计工作台——图层侧边栏.html  语言切换.html  账户页面.html  项目工作台白天.html  项目工作台黑夜.html
backend/: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  docker部署es.txt  es使用.txt  main.py  pyproject.toml  requirements.txt  剧本库.txt  构建docker镜像.md  模型供应商思考字段及控制.txt  目录结构.txt  项目重构.md
backend/config/: ai.py  database.py  elasticsearch.py  email.py  minio.py  redis.py  settings.py
backend/docs/: 剧本库.txt  功能开发Agent.txt  模型供应商.txt  目录结构.txt
backend/src/api/v1/: router.py
backend/src/modules/providers/: __init__.py
backend/src/shared/common/: dependencies.py  response.py  utils.py
backend/src/shared/domain/: base_entity.py  base_value_object.py  exceptions.py
backend/src/shared/infrastructure/: database.py  redis.py  unit_of_work.py
backend/src/shared/middleware/: error_handler.py  logging.py  request_context.py
backend/src/shared/security/: jwt_handler.py  password_hasher.py  provider_key_cipher.py
backend/tests/: conftest.py
backend/tests/unit/test_auth/: test_captcha_purpose_usage.py
backend/tests/unit/test_captcha/: test_captcha_key.py  test_email_captcha_service.py
backend/tests/unit/test_providers/: test_chat_service.py  test_deepseek_llm_adapter.py  test_model_generation_service.py  test_openai_compatible_config_management_service.py  test_provider_config_management_service.py  test_provider_config_repository.py  test_provider_key_cipher.py  test_provider_persistence_repository.py  test_provider_persistence_repository_openai_compatible.py  test_qwen_llm_adapter.py  (+2 more)
docker/: README.md  (+4 more)
(+464 files in other folders)
