[project]
name = "WeiMeng"
version = "0.1.0"
description = "Backend for WeiMeng"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.12.1",
    "langgraph>=1.0.7",
    "langsmith>=0.6.7",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pdfplumber>=0.11.0",
    "python-jose[cryptography]>=3.5.0",
    "python-docx>=1.1.2",
    "redis>=7.1.0",
    "uvicorn>=0.40.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "bcrypt>=4.0.1",
    "aiosmtplib>=3.0.1",
    "psycopg[binary,pool]>=3.3.2",
    "langchain-postgres>=0.0.16",
    "langgraph-checkpoint-postgres>=3.0.4",
    "pyyaml>=6.0.1",
    "openai>=1.0.0",
    "minio>=7.2.18",
    "python-multipart>=0.0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
